# matrix-rust-sdk

./: .gitignore  .rusty-hook.toml  .trivyignore  .trivyignore.yaml  .typos.toml  CHANGES_BWI.md  Cargo.toml  README.md  UPGRADING-0.5-to-0.6.md  build.gradle.kts  gradle.properties  local.properties  publiccode.yml  renovate.json  settings.gradle
android-scripts/: build.sh
benchmarks/benches/: room_bench.rs
bindings/android/: build.gradle
bindings/apple/: Debug-Package.swift
bindings/matrix-sdk-crypto-ffi/: build.rs
bindings/matrix-sdk-crypto-ffi/src/: lib.rs  pk.rs
bindings/matrix-sdk-ffi/: Cargo.toml  build.rs
bindings/matrix-sdk-ffi/src/: bwi_bindings.rs  bwi_client_extensions.rs  client.rs  client_builder.rs  error.rs  event.rs  lib.rs  room.rs  room_list.rs  ruma.rs  tchap_bindings.rs
bindings/matrix-sdk-ffi/src/room/: mod.rs
bindings/matrix-sdk-ffi/src/timeline/: content.rs  mod.rs
buildSrc/src/main/kotlin/: BuildVersionsSDK.kt  ConfigurationData.kt
crates/matrix-sdk/: CHANGELOG.md  Cargo.toml
crates/matrix-sdk-base-bwi/: Cargo.toml
crates/matrix-sdk-base-bwi/src/: http_client.rs  jwt_token.rs  lib.rs  room_alias.rs
crates/matrix-sdk-base-bwi/src/content_scanner/: mod.rs  scan_state.rs
crates/matrix-sdk-base-bwi/src/federation/: mod.rs  test.rs
crates/matrix-sdk-base-bwi/src/jwt_token/: mod.rs  test.rs
crates/matrix-sdk-base-bwi/tests/: jwt_token_test.rs  wiremock_in_pipeline.rs
crates/matrix-sdk-base-bwi/tests/resources/: invalid_jwt_key.key.pub  invalid_jwt_key.pem  valid_jwt_key.key.pub
crates/matrix-sdk-bwi/: Cargo.toml
crates/matrix-sdk-bwi/src/: attachment.rs  lib.rs  password_evaluator.rs  room_alias.rs
crates/matrix-sdk-bwi/src/content_scanner/: dto.rs  mod.rs  request.rs  url.rs
crates/matrix-sdk-bwi/src/content_scanner/request/: download_encrypted.rs  mod.rs  scan_encrypted.rs
crates/matrix-sdk-bwi/src/federation/: mod.rs  test.rs
crates/matrix-sdk-bwi/src/regulatory/: data_privacy.rs  imprint.rs  mod.rs  organization.rs  well_known_file.rs
crates/matrix-sdk-bwi/src/room_alias/: mod.rs
crates/matrix-sdk-bwi/src/settings_cache/: mod.rs
crates/matrix-sdk-bwi/tests/: content_scanner.rs  regulatory_tests.rs
crates/matrix-sdk-crypto/src/backups/: mod.rs
crates/matrix-sdk-crypto/src/backups/keys/: compat.rs  mod.rs
crates/matrix-sdk-indexeddb/src/event_cache_store/: mod.rs
crates/matrix-sdk-sqlite/src/: crypto_store.rs  lib.rs
crates/matrix-sdk-tchap/: Cargo.toml
crates/matrix-sdk-tchap/src/: get_instance_from_email.rs  lib.rs
crates/matrix-sdk-ui/: Cargo.toml
crates/matrix-sdk-ui/src/: sync_service.rs
crates/matrix-sdk-ui/src/room_list_service/: mod.rs  room.rs  room_list.rs  state.rs
crates/matrix-sdk-ui/src/room_list_service/filters/: invite.rs
crates/matrix-sdk-ui/src/timeline/: builder.rs  date_dividers.rs  day_dividers.rs  error.rs  event_handler.rs  futures.rs  mod.rs  virtual_item.rs
crates/matrix-sdk-ui/src/timeline/controller/: mod.rs  state_transaction.rs
crates/matrix-sdk-ui/src/timeline/event_item/content/: mod.rs
crates/matrix-sdk-ui/src/timeline/tests/: mod.rs
crates/matrix-sdk-ui/tests/integration/: room_list_service.rs
crates/matrix-sdk-ui/tests/integration/timeline/: media.rs
crates/matrix-sdk/src/: attachment.rs  bwi_content_scanner.rs  bwi_content_scanner_api.rs  error.rs  lib.rs  media.rs  send_queue.rs  test_utils.rs
crates/matrix-sdk/src/authentication/matrix/: login_builder.rs
crates/matrix-sdk/src/bwi_content_scanner_api/: download_encrypted.rs  get_public_key.rs  scan_file.rs
crates/matrix-sdk/src/bwi_extensions/: attachment.rs  client.rs  mod.rs
crates/matrix-sdk/src/client/: mod.rs  search_indexer.rs
crates/matrix-sdk/src/client/builder/: mod.rs
crates/matrix-sdk/src/encryption/: mod.rs
crates/matrix-sdk/src/matrix_auth/: login_builder.rs
crates/matrix-sdk/src/room/: access_rules.rs  identity_status_changes.rs  mod.rs
crates/matrix-sdk/src/send_queue/: mod.rs
crates/matrix-sdk/src/sliding_sync/: client.rs  error.rs
crates/matrix-sdk/src/test_utils/: client.rs  mod.rs
crates/matrix-sdk/tests/integration/: client.rs  matrix_auth.rs  media.rs  room_preview.rs  send_queue.rs
crates/matrix-sdk/tests/integration/encryption/: backups.rs  verification.rs
examples/bwi/: Cargo.toml
examples/bwi/src/: main.rs
examples/media_content-scanner/: Cargo.toml
examples/media_content-scanner/src/: main.rs
examples/timeline/: Cargo.toml
examples/timeline/src/: main.rs
labs/multiverse/: Cargo.toml
labs/multiverse/src/: main.rs
testing/matrix-sdk-bwi-test/: Cargo.toml
testing/matrix-sdk-bwi-test/src/: jwt_token.rs  lib.rs
testing/matrix-sdk-bwi-test/src/media/: mock_server.rs  mod.rs
testing/matrix-sdk-bwi-test/src/wiremock_ext/: mod.rs
testing/matrix-sdk-integration-testing/: Cargo.toml
testing/matrix-sdk-integration-testing/src/tests/: e2ee.rs  invitations.rs  nse.rs  redaction.rs  repeated_join.rs  room.rs  room_directory_search.rs  room_privacy.rs  timeline.rs
testing/matrix-sdk-integration-testing/src/tests/sliding_sync/: notification_client.rs  room.rs
testing/matrix-sdk-test-macros/src/: lib.rs
tools/ci/: configure_http_proxy.sh
tools/nexus/: nexus_upload.sh
