[package]
name = "matrix-sdk-base-bwi"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
mockall = "0.13.0"
regex = "1.10.5"
serde = { version = "1.0.151" }
serde_json = "1.0.91"
tokio = { version = "1.41.1", features = ["full"] }
url = "2.5.4"
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1.0.93"
jsonwebtoken = "9.3.0"
log = "0.4.22"


[lints]
workspace = true
