[package]
name = "matrix-sdk-base-bwi"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
jsonwebtoken = "9.3.0"
log = "0.4.22"
regex = "1.11.1"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
url = { workspace = true }
wiremock = { workspace = true }

[dev-dependencies]

[lints]
workspace = true

