[package]
name = "matrix-sdk-bwi"
version = "0.3.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }
matrix-sdk-base = { workspace = true, features = ["e2e-encryption"] }
matrix-sdk-base-bwi = { workspace = true }
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
url = { workspace = true }
wiremock = { workspace = true }
zxcvbn = "3.1.0"


[dev-dependencies]
rusty-hook = "0.11.2"
simple_logger = "5.0.0"

[lints]
workspace = true
