[package]
name = "bwi-example"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[[bin]]
name = "bwi-example"
test = false

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.0.16", features = ["derive"] }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }
url = { workspace = true }
matrix-sdk = { path = "../../crates/matrix-sdk" }
matrix-sdk-ui = { path = "../../crates/matrix-sdk-ui", features = ["enable_external_content_scanner_setup"] }
eyeball-im = "0.5.0"
log = "0.4.22"
tracing = { workspace = true }
mime = { workspace = true }

[lints]
workspace = true

[package.metadata.release]
release = false
