[package]
name = "example-timeline"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[[bin]]
name = "example-timeline"
test = false

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.0.16", features = ["derive"] }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }
url = { workspace = true }
# when copy-pasting this, please use a git dependency or make sure that you
# have copied the example as it was at the time of the release you use.
matrix-sdk = { path = "../../crates/matrix-sdk" }
matrix-sdk-bwi = { path = "../../crates/matrix-sdk-bwi" }
matrix-sdk-base-bwi = { path = "../../crates/matrix-sdk-base-bwi" }
matrix-sdk-ui = { path = "../../crates/matrix-sdk-ui", features = ["enable_external_content_scanner_setup"] }
eyeball-im = "0.5.0"
log = "0.4.22"
tracing = "0.1.40"

[lints]
workspace = true

[package.metadata.release]
release = false
